// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetOverview should render correctly 1`] = `
<View
  style={
    {
      "paddingTop": 20,
    }
  }
  testID="token-asset-overview"
>
  <View>
    <View
      style={
        {
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "CentraNo1-Medium",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Ethereum
         (
        ETH
        )
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Bold",
            "fontSize": 24,
            "fontWeight": "700",
            "letterSpacing": 0,
            "lineHeight": 32,
          }
        }
        testID="token-price"
      >
        <View
          style={
            {
              "paddingTop": 8,
            }
          }
        >
          <View
            onLayout={[Function]}
          >
            <View
              style={
                {
                  "position": "relative",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 6,
                      "height": 32,
                      "width": 100,
                    },
                    {
                      "backgroundColor": "#E1E9EE",
                      "overflow": "hidden",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Book",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        <View
          style={
            {
              "paddingTop": 2,
            }
          }
          testID="loading-price-diff"
        >
          <View
            onLayout={[Function]}
          >
            <View
              style={
                {
                  "position": "relative",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 6,
                      "height": 18,
                      "width": 150,
                    },
                    {
                      "backgroundColor": "#E1E9EE",
                      "overflow": "hidden",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </Text>
    </View>
    <View
      style={
        {
          "paddingHorizontal": 16,
          "paddingTop": 10,
          "width": 750,
        }
      }
    >
      <View
        onLayout={[Function]}
      >
        <View
          style={
            {
              "position": "relative",
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 6,
                  "height": 586.96,
                  "width": 718,
                },
                {
                  "backgroundColor": "#E1E9EE",
                  "overflow": "hidden",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "paddingHorizontal": 10,
          "paddingTop": 20,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#858b9a29",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1D
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1W
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1M
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          3M
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1Y
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          3Y
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-buy-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="Add"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Buy
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-swap-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="SwapHorizontal"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Swap
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-bridge-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="Bridge"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Bridge
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-send-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="Arrow2Upright"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Send
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-receive-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="QrCode"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Receive
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Bold",
            "fontSize": 18,
            "fontWeight": "700",
            "letterSpacing": 0,
            "lineHeight": 24,
            "paddingHorizontal": 15,
            "paddingVertical": 4,
          }
        }
      >
        Your balance
      </Text>
      <TouchableOpacity
        onLongPress={[Function]}
        onPress={[Function]}
        style={
          {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
        testID="asset-ETH"
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "center",
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              style={
                {
                  "backgroundColor": "#ffffff",
                  "borderRadius": 16,
                  "height": 32,
                  "overflow": "hidden",
                  "width": 32,
                }
              }
            >
              <Image
                onError={[Function]}
                resizeMode="contain"
                source={
                  {
                    "uri": "",
                  }
                }
                style={
                  {
                    "flex": 1,
                    "height": undefined,
                    "width": undefined,
                  }
                }
                testID="token-avatar-image"
              />
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "bottom": 0,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#ffffff",
                    "borderColor": "#ffffff",
                    "borderRadius": 8,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001a",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Image
                  onError={[Function]}
                  resizeMode="contain"
                  source={1}
                  style={
                    {
                      "height": 32,
                      "width": 32,
                    }
                  }
                  testID="network-avatar-image"
                />
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="text"
          style={
            {
              "alignSelf": "center",
              "color": "#121314",
              "flex": 1,
              "fontFamily": "CentraNo1-Medium",
              "fontSize": 18,
              "fontWeight": "500",
              "justifyContent": "center",
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 20,
            }
          }
        >
          Ethereum
        </Text>
        <View
          style={
            {
              "alignItems": "flex-end",
              "alignSelf": "flex-end",
              "flex": 1,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Medium",
                "fontSize": 18,
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
            testID="balance-test-id"
          >
            1500
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
                "paddingHorizontal": 0,
                "textTransform": "uppercase",
              }
            }
            testID="secondary-balance-test-id"
          >
            0 ETH
          </Text>
        </View>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "marginBottom": 20,
          "paddingHorizontal": 16,
        }
      }
    />
  </View>
</View>
`;

exports[`AssetOverview should render native balances even if there are no accounts for the asset chain in the state 1`] = `
<View
  style={
    {
      "paddingTop": 20,
    }
  }
  testID="token-asset-overview"
>
  <View>
    <View
      style={
        {
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "CentraNo1-Medium",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Ethereum
         (
        ETH
        )
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Bold",
            "fontSize": 24,
            "fontWeight": "700",
            "letterSpacing": 0,
            "lineHeight": 32,
          }
        }
        testID="token-price"
      >
        <View
          style={
            {
              "paddingTop": 8,
            }
          }
        >
          <View
            onLayout={[Function]}
          >
            <View
              style={
                {
                  "position": "relative",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 6,
                      "height": 32,
                      "width": 100,
                    },
                    {
                      "backgroundColor": "#E1E9EE",
                      "overflow": "hidden",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Book",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        <View
          style={
            {
              "paddingTop": 2,
            }
          }
          testID="loading-price-diff"
        >
          <View
            onLayout={[Function]}
          >
            <View
              style={
                {
                  "position": "relative",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 6,
                      "height": 18,
                      "width": 150,
                    },
                    {
                      "backgroundColor": "#E1E9EE",
                      "overflow": "hidden",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </Text>
    </View>
    <View
      style={
        {
          "paddingHorizontal": 16,
          "paddingTop": 10,
          "width": 750,
        }
      }
    >
      <View
        onLayout={[Function]}
      >
        <View
          style={
            {
              "position": "relative",
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 6,
                  "height": 586.96,
                  "width": 718,
                },
                {
                  "backgroundColor": "#E1E9EE",
                  "overflow": "hidden",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "paddingHorizontal": 10,
          "paddingTop": 20,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#858b9a29",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1D
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1W
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1M
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          3M
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1Y
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          3Y
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-buy-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="Add"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Buy
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-swap-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="SwapHorizontal"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Swap
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-bridge-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="Bridge"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Bridge
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-send-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="Arrow2Upright"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Send
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-receive-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="QrCode"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Receive
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Bold",
            "fontSize": 18,
            "fontWeight": "700",
            "letterSpacing": 0,
            "lineHeight": 24,
            "paddingHorizontal": 15,
            "paddingVertical": 4,
          }
        }
      >
        Your balance
      </Text>
      <TouchableOpacity
        onLongPress={[Function]}
        onPress={[Function]}
        style={
          {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
        testID="asset-ETH"
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "center",
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              useNativeDriver={true}
            >
              <Image
                fadeIn={true}
                onError={[Function]}
                onLoadEnd={[Function]}
                source={
                  {
                    "uri": "",
                  }
                }
                style={
                  [
                    {
                      "borderRadius": 12,
                      "height": 24,
                      "width": 24,
                    },
                    undefined,
                    false,
                    false,
                    {
                      "borderRadius": 16,
                      "height": 32,
                      "overflow": "hidden",
                      "width": 32,
                    },
                  ]
                }
                testID="PLACE HOLDER"
              />
              <View
                collapsable={false}
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "borderRadius": 16,
                        "height": 32,
                        "overflow": "hidden",
                        "width": 32,
                      },
                      {
                        "backgroundColor": "#eee",
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "bottom": 0,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#f3f5f9",
                    "borderColor": "#ffffff",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001a",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  ?
                </Text>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="text"
          style={
            {
              "alignSelf": "center",
              "color": "#121314",
              "flex": 1,
              "fontFamily": "CentraNo1-Medium",
              "fontSize": 18,
              "fontWeight": "500",
              "justifyContent": "center",
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 20,
            }
          }
        >
          Ethereum
        </Text>
        <View
          style={
            {
              "alignItems": "flex-end",
              "alignSelf": "flex-end",
              "flex": 1,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Medium",
                "fontSize": 18,
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
            testID="balance-test-id"
          >
            1500
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
                "paddingHorizontal": 0,
                "textTransform": "uppercase",
              }
            }
            testID="secondary-balance-test-id"
          >
            0 ETH
          </Text>
        </View>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "marginBottom": 20,
          "paddingHorizontal": 16,
        }
      }
    />
  </View>
</View>
`;

exports[`AssetOverview should render native balances when non evm network is selected 1`] = `
<View
  style={
    {
      "paddingTop": 20,
    }
  }
  testID="token-asset-overview"
>
  <View>
    <View
      style={
        {
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#686e7d",
            "fontFamily": "CentraNo1-Medium",
            "fontSize": 16,
            "fontWeight": "500",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Ethereum
         (
        ETH
        )
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Bold",
            "fontSize": 24,
            "fontWeight": "700",
            "letterSpacing": 0,
            "lineHeight": 32,
          }
        }
        testID="token-price"
      >
        <View
          style={
            {
              "paddingTop": 8,
            }
          }
        >
          <View
            onLayout={[Function]}
          >
            <View
              style={
                {
                  "position": "relative",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 6,
                      "height": 32,
                      "width": 100,
                    },
                    {
                      "backgroundColor": "#E1E9EE",
                      "overflow": "hidden",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </Text>
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Book",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        <View
          style={
            {
              "paddingTop": 2,
            }
          }
          testID="loading-price-diff"
        >
          <View
            onLayout={[Function]}
          >
            <View
              style={
                {
                  "position": "relative",
                }
              }
            >
              <View
                style={
                  [
                    {
                      "borderRadius": 6,
                      "height": 18,
                      "width": 150,
                    },
                    {
                      "backgroundColor": "#E1E9EE",
                      "overflow": "hidden",
                    },
                  ]
                }
              />
            </View>
          </View>
        </View>
      </Text>
    </View>
    <View
      style={
        {
          "paddingHorizontal": 16,
          "paddingTop": 10,
          "width": 750,
        }
      }
    >
      <View
        onLayout={[Function]}
      >
        <View
          style={
            {
              "position": "relative",
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 6,
                  "height": 586.96,
                  "width": 718,
                },
                {
                  "backgroundColor": "#E1E9EE",
                  "overflow": "hidden",
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-around",
          "paddingHorizontal": 10,
          "paddingTop": 20,
        }
      }
    >
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#858b9a29",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1D
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1W
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1M
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          3M
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          1Y
        </Text>
      </TouchableOpacity>
      <TouchableOpacity
        onPress={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "borderRadius": 40,
            "justifyContent": "center",
            "paddingHorizontal": 8,
            "paddingLeft": 10,
            "paddingVertical": 2,
          }
        }
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#686e7d",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 3,
              "lineHeight": 22,
              "textAlign": "center",
            }
          }
        >
          3Y
        </Text>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-evenly",
          "padding": 16,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-buy-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="Add"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Buy
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-swap-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="SwapHorizontal"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Swap
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-bridge-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="Bridge"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Bridge
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-send-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="Arrow2Upright"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Send
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
          }
        }
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            [
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingVertical": 16,
                "width": "100%",
              },
              {
                "alignItems": "flex-start",
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingTop": 16,
                "paddingVertical": 2,
                "width": "100%",
              },
              false,
            ]
          }
          testID="token-receive-button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#4459ff",
                "borderRadius": 20,
                "height": 40,
                "justifyContent": "center",
                "marginHorizontal": 16,
                "overflow": "hidden",
                "width": 40,
              }
            }
          >
            <SvgMock
              color="#ffffff"
              height={24}
              name="QrCode"
              style={
                {
                  "height": 24,
                  "width": 24,
                }
              }
              width={24}
            />
          </View>
          <View>
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#121314",
                  "fontFamily": "CentraNo1-Medium",
                  "fontSize": 18,
                  "fontWeight": "500",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
            <Text
              accessibilityRole="text"
              style={
                {
                  "color": "#686e7d",
                  "fontFamily": "CentraNo1-Book",
                  "fontSize": 16,
                  "fontWeight": "400",
                  "letterSpacing": 0,
                  "lineHeight": 24,
                }
              }
            />
          </View>
        </TouchableOpacity>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "CentraNo1-Book",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Receive
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#121314",
            "fontFamily": "CentraNo1-Bold",
            "fontSize": 18,
            "fontWeight": "700",
            "letterSpacing": 0,
            "lineHeight": 24,
            "paddingHorizontal": 15,
            "paddingVertical": 4,
          }
        }
      >
        Your balance
      </Text>
      <TouchableOpacity
        onLongPress={[Function]}
        onPress={[Function]}
        style={
          {
            "alignItems": "flex-start",
            "flex": 1,
            "flexDirection": "row",
            "paddingHorizontal": 15,
            "paddingVertical": 10,
          }
        }
        testID="asset-ETH"
      >
        <View
          onLayout={[Function]}
          style={
            {
              "alignSelf": "center",
              "position": "relative",
            }
          }
          testID="badge-wrapper-badge"
        >
          <View>
            <View
              useNativeDriver={true}
            >
              <Image
                fadeIn={true}
                onError={[Function]}
                onLoadEnd={[Function]}
                source={
                  {
                    "uri": "",
                  }
                }
                style={
                  [
                    {
                      "borderRadius": 12,
                      "height": 24,
                      "width": 24,
                    },
                    undefined,
                    false,
                    false,
                    {
                      "borderRadius": 16,
                      "height": 32,
                      "overflow": "hidden",
                      "width": 32,
                    },
                  ]
                }
                testID="PLACE HOLDER"
              />
              <View
                collapsable={false}
                style={
                  {
                    "bottom": 0,
                    "left": 0,
                    "opacity": 1,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  }
                }
              >
                <View
                  style={
                    [
                      {
                        "borderRadius": 16,
                        "height": 32,
                        "overflow": "hidden",
                        "width": 32,
                      },
                      {
                        "backgroundColor": "#eee",
                      },
                      undefined,
                    ]
                  }
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "aspectRatio": 1,
                "bottom": 0,
                "height": 0,
                "justifyContent": "center",
                "position": "absolute",
                "right": 0,
                "transform": [
                  {
                    "translateX": 0,
                  },
                  {
                    "translateY": 0,
                  },
                ],
              }
            }
          >
            <View
              onLayout={[Function]}
              style={
                {
                  "alignItems": "center",
                  "aspectRatio": 1,
                  "height": "50%",
                  "justifyContent": "center",
                  "maxHeight": 24,
                  "minHeight": 8,
                  "opacity": 0,
                }
              }
              testID="badgenetwork"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#f3f5f9",
                    "borderColor": "#ffffff",
                    "borderRadius": 16,
                    "borderWidth": 2,
                    "height": 32,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "shadowColor": "#0000001a",
                    "shadowOffset": {
                      "height": 2,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 4,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 32,
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "CentraNo1-Book",
                      "fontSize": 16,
                      "fontWeight": "400",
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  ?
                </Text>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="text"
          style={
            {
              "alignSelf": "center",
              "color": "#121314",
              "flex": 1,
              "fontFamily": "CentraNo1-Medium",
              "fontSize": 18,
              "fontWeight": "500",
              "justifyContent": "center",
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginLeft": 20,
            }
          }
        >
          Ethereum
        </Text>
        <View
          style={
            {
              "alignItems": "flex-end",
              "alignSelf": "flex-end",
              "flex": 1,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "CentraNo1-Medium",
                "fontSize": 18,
                "fontWeight": "500",
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
            testID="balance-test-id"
          >
            1500
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "CentraNo1-Book",
                "fontSize": 16,
                "fontWeight": "400",
                "letterSpacing": 0,
                "lineHeight": 24,
                "paddingHorizontal": 0,
                "textTransform": "uppercase",
              }
            }
            testID="secondary-balance-test-id"
          >
            400 ETH
          </Text>
        </View>
      </TouchableOpacity>
    </View>
    <View
      style={
        {
          "marginBottom": 20,
          "paddingHorizontal": 16,
        }
      }
    />
  </View>
</View>
`;
